--- a/index.html
+++ b/index.html
@@ -273,12 +273,29 @@
   </ul>
 </section>
 
-<!-- New: Progress Tracker -->
+<!-- Compact Progress Tracker -->
 <section class="card" id="progressTracker">
   <h2>📈 Progress Tracker</h2>
-  <canvas id="progressChart" width="200" height="200"></canvas>
-  <button onclick="updateProgress()">Update Progress</button>
+
+  <canvas id="progressChart" width="50" height="50" aria-label="Overall Progress" role="img" style="display: block; margin: 0 auto;"></canvas>
+  <button onclick="updateProgress()" style="margin: 1rem auto; display: block;">Update Progress</button>
+
+  <h3>🦶 Steps Walked Today:</h3>
+  <p id="stepCount">3,200 / 10,000 steps</p>
+
+  <h3>💧 Water Intake:</h3>
+  <p id="waterIntake">5 / 8 glasses</p>
+
+  <h3>🛌 Sleep Duration:</h3>
+  <p id="sleepHours">6.5 hours</p>
+
+  <h3>💬 Daily Motivation:</h3>
+  <blockquote style="background: #f0f0f0; padding: 0.75rem 1rem; border-left: 4px solid var(--accent); border-radius: 0.5rem; font-style: italic; margin-top: 0.5rem;">
+    "Take care of your body. It’s the only place you have to live." – Jim Rohn
+  </blockquote>
 </section>
+
+
 
 <!-- New: FAQ Section -->
 <section class="card" id="faq">
