--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HealthMate - Interactive Health Management</title>
   <meta name="description" content="Comprehensive online health management system leveraging HCI principles." />
+  <link href="./index.css" rel="stylesheet"> 
   <style>
     /* Reset & Box Sizing */
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
